# PenpitoApp

./: .gitignore  README.md  app.json  package-lock.json  package.json
Kraken/: platformio.ini
Kraken/src/: main.cpp
app/: _layout.tsx
app/(tabs)/: _layout.tsx  ajustes.tsx  index.tsx  tragos.tsx
dist-export/: metadata.json
dist-export/_expo/static/js/android/: entry-6b0e261b4a928e76d554e1fed96535f2.hbc
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  actuators.c  app_controller.c  app_main.c  ble_service.c  machine_state.c  recipe_engine.c  recipes.c  safety.c  sensors.c  settings.c  stats.c  storage_nvs.c
firmware/main/include/: actuators.h  app_controller.h  app_types.h  ble_service.h  board_config.h  machine_state.h  recipe_engine.h  recipes.h  safety.h  sensors.h  settings.h  stats.h  storage_nvs.h
src/adapters/: ICommunicationAdapter.ts  KrakenHttpAdapter.ts  MockAdapter.ts
src/components/: AppBootstrap.tsx  PreparationTimeline.tsx
src/constants/: Colors.ts
src/models/: index.ts
src/repositories/: InventoryRepository.ts  LocalDatabase.ts  LocalDatabase.web.ts  OrderRepository.ts  RecipeRepository.ts  SettingsRepository.ts
src/screens/: MainAppScreen.tsx
src/services/: CommandQueueService.ts  DeviceService.ts
src/stores/: AppStore.ts  InventoryStore.ts  OrderStore.ts  RecipeStore.ts  SessionStore.ts  SettingsStore.ts
src/utils/: drinkConfig.ts  preparation.ts  tableQr.ts
